opam-version: "1.2"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/redis-tls"
doc: "https://github.com/zshipko/redis-tls/doc"
license: "ISC"
dev-repo: "https://github.com/zshipko/redis-tls.git"
bug-reports: "https://github.com/zshipko/redis-tls/issues"
tags: []

available: [ ocaml-version >= "4.03.0"]

depends:
[
    "jbuilder" {build}
    "hiredis" { >= "0.5" }
    "resp-server"
]

depopts: []

build:
[
    ["jbuilder" "build"]
]

build-test:
[
    ["jbuilder" "runtest"]
]
